# hackaton2026

./: .gitignore  DEPLOY_CONTRACTS.md  README.md  be_blockchain_alternativa_rete_pubblica.md  be_blockchain_e_token_e3cce470.plan.md  be_blockchain_e_token_features_userstories.md  fe_blockchain_e_biglietti_1abb3646.plan.md  ip_address.txt  main.py  pyproject.toml
.claude/: settings.local.json
.cursor/: mcp.json
backend-api/: .env  .env.example  README.md
backend-api/app/: config.py  contracts.py  main.py  schemas.py  tx_service.py  web3_provider.py
blockchain/: .env  LAN_SETUP.md  README.md  RUNBOOK.md  config.toml  docker-compose.node.yml  docker-compose.yml  entrypoint.sh  genesis.json  static-nodes.json
blockchain/scripts/: check_peers.py  create_wallet.py  fund_wallet.py  generate_keys.py  inspect_chain.py
blockchain/wallets/: alice.json  claudio.json  qualcosa.json  seriea.json  test_accounts.json
contracts/: .gitignore  README.md  ape-config.yaml
contracts/contracts/: TicketMarketplace.sol  TicketNFT.sol
contracts/deployments/: marketplace.json  ticket_nft.json
contracts/scripts/: check_wallet.py  deploy.py  import_ente.py  marketplace_demo.py
contracts/tests/: conftest.py  test_marketplace.py  test_ticket_nft.py
docs/: CREARE_TOKEN_CHAIN.md  PREREQUISITI.md
frontend/: .env  .env.example  .gitignore  CLAUDE.md  FRONTEND_OVERVIEW.md  PHASE_0_TASKS.md  PHASE_1_TASKS.md  index.html  orval.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/coverage/: lcov.info
(+138 files in other folders)
